add ui for frontend uttility

--- a/index.html
+++ b/index.html
@@ -94,18 +94,21 @@
         <li><a href="register-3.html" target="_blank">7. register part 3</a></li>
         <li><a href="register-4.html" target="_blank">8. register part 4</a></li>
         <li><a href="register-5.html" target="_blank">8. register result</a></li>
-        <li><a href="scan-1.html" target="_blank">9. scan code</a></li>
-        <li><a href="scan-2.html" target="_blank">10. scan result</a></li>
-        <li><a href="reward-1.html" target="_blank">11. reward dashboard</a></li>
-        <li><a href="reward-2.html" target="_blank">12. reward lists</a></li>
-        <li><a href="reward-3.html" target="_blank">13. reward detail</a></li>
-        <li><a href="reward-4.html" target="_blank">14. reward score history</a></li>
-        <li><a href="reward-5.html" target="_blank">15. reward exchange history</a></li>
-        <li><a href="profile-1.html" target="_blank">16. profile dashboard</a></li>
-        <li><a href="profile-2.html" target="_blank">17. profile edit</a></li>
-        <li><a href="keep.html" target="_blank">18. keep</a></li>
-        <li><a href="contact-1.html" target="_blank">19. contact</a></li>
-        <li><a href="insurance.html" target="_blank">20. insurance</a></li>
+        <li><a href="home.html" target="_blank">9. home</a></li>
+        <li><a href="scan-1.html" target="_blank">10. scan code</a></li>
+        <li><a href="scan-2.html" target="_blank">11. scan result</a></li>
+        <li><a href="reward-1.html" target="_blank">12. reward dashboard</a></li>
+        <li><a href="reward-2.html" target="_blank">13. reward lists</a></li>
+        <li><a href="reward-3.html" target="_blank">14. reward detail</a></li>
+        <li><a href="reward-4.html" target="_blank">15. reward score history</a></li>
+        <li><a href="reward-5.html" target="_blank">16. reward exchange history</a></li>
+        <li><a href="profile-1.html" target="_blank">17. profile dashboard</a></li>
+        <li><a href="profile-2.html" target="_blank">18. profile edit</a></li>
+        <li><a href="keep.html" target="_blank">19. keep</a></li>
+        <li><a href="contact-1.html" target="_blank">20. contact</a></li>
+        <li><a href="insurance.html" target="_blank">21. insurance</a></li>
+        <li><a href="loading.html" target="_blank">22. Loading overlay</a></li>
+        <li><a href="scan-3.html" target="_blank">23. scan input for web platform</a></li>
         <!-- <li><a href="XXXXX.html" target="_blank">XXX. XXXXX</a></li> -->
       </ul>
     </div>
