import niceScroll for navigation bar

--- a/navigationbar.html
+++ b/navigationbar.html
@@ -121,6 +121,7 @@
   <script type="text/javascript" src="./../assets/js/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="./../assets/js/jquery-migrate/jquery-migrate-3.0.1.min.js"></script>
   <script type="text/javascript" src="./../assets/js/is_js/is.min.js"></script>
+  <script type="text/javascript" src="./../assets/js/jquery.nicescroll/jquery.nicescroll.min.js"></script>
   <script type="text/javascript" src="./../assets/js/jquery.scrollTo/jquery.scrollTo.min.js"></script>
   <script type="text/javascript" src="./../assets/js/main.js"></script>
   <script>
