custom scan layout

--- a/scan-3.html
+++ b/scan-3.html
@@ -92,6 +92,11 @@
   <div class="container-content is-except-topbar-title is-flex-center-all">
     <div class="scan-form">
       <div class="scan-segment">
+        <div class="scan">
+          <img class="barcode" src="./assets/images/contents/barcode.gif" alt="Barcode">
+        </div>
+      </div>
+      <div class="scan-segment">
         <div class="panel-form">
           <div class="field is-error"><!-- add class 'is-error' to display error UI and validation message -->
             <input class="field-input" type="text" placeholder="Code">
@@ -99,13 +104,26 @@
           </div>
         </div>
       </div>
-      <div class="scan-segment is-button">
-        <button class="button is-fluid" type="button">
+      <!-- <div class="scan-segment is-button">
+        <button class="button is-flexible is-fluid" type="button">
           <span class="button-body">
             <span class="button-text">ตกลง</span>
           </span>
         </button>
-      </div>
+        <button class="button is-flexible is-fluid" type="button">
+          <span class="button-body">
+            <span class="button-text">ยกเลิก</span>
+          </span>
+        </button>
+      </div> -->
+    </div>
+    <div class="scan-control">
+      <a class="button-shot" href="#">
+        <img src="./assets/images/icons/icon-shot.svg" alt="Icon">
+      </a>
+      <a class="button-close" href="#">
+        <img src="./assets/images/icons/icon-close.svg" alt="Icon">
+      </a>
     </div>
   </div>
 
