fix insurance topbar layout

--- a/insurance.html
+++ b/insurance.html
@@ -82,17 +82,13 @@
   -->
 </head>
 <body>
+  <!-- Topbar -->
+  <div class="topbar is-title">
+    <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
+    <span class="title text-first-lg-bold is-orange-1">ตรวจสอบระยะประกันสินค้า</span>
+  </div>
+
   <div class="container-content is-except-topbar-footer">
-    <div class="postbar is-light-theme">
-      <div class="postbar-info">
-        <div class="postbar-segment is-logo">
-          <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
-        </div>
-        <div class="postbar-segment is-meta">
-          <span class="username" title="ศิริชัย  ลาภมหานนท์">ตรวจสอบระยะประกันสินค้า</span>
-        </div>
-      </div>
-    </div>
     <div class="insurance">
       <div class="insurance-list">
         <div class="insurance-title">
