fix loading component in default/active state

--- a/loading.html
+++ b/loading.html
@@ -158,7 +158,7 @@
   </div>
 
   <!-- Loading -->
-  <div class="loading is-orange">
+  <div class="loading is-orange is-active">
     <div class="ball-pulse">
       <div></div>
       <div></div>
