--- a/keep.html
+++ b/keep.html
@@ -100,7 +100,7 @@
       <div class="postbar">
         <div class="postbar-info">
           <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
+            <img class="logo" src="./assets/images/logos/logo-small.svg" alt="Logo">
           </div>
           <div class="postbar-segment is-meta">
             <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
@@ -143,7 +143,7 @@
       <div class="postbar">
         <div class="postbar-info">
           <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
+            <img class="logo" src="./assets/images/logos/logo-small.svg" alt="Logo">
           </div>
           <div class="postbar-segment is-meta">
             <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
