--- a/scan-1.html
+++ b/scan-1.html
@@ -84,7 +84,7 @@
 <body>
   <!-- Topbar -->
   <div class="topbar is-title">
-    <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
+    <img class="logo" src="./assets/images/logos/logo-small.svg" alt="Logo">
     <span class="title text-first-lg-bold is-orange-1">แสกนสินค้า</span>
     <!-- <span class="title text-first-lg-bold is-orange-1">ตรวจสอบระยะประกันสินค้า</span> -->
   </div>
