--- a/splash-screen.html
+++ b/splash-screen.html
@@ -82,9 +82,11 @@
   -->
 </head>
 <body>
-  <div class="background-container">
-    <div class="splash-screen">
-      <img class="logo" src="./assets/images/logos/logo.png" alt="Logo">
+  <div class="background-container is-splash-screen">
+    <div class="background-container-inner">
+      <div class="splash-screen">
+        <img class="logo" src="./assets/images/logos/logo.svg" alt="Logo">
+      </div>
     </div>
   </div>
 
