--- a/reward-5.html
+++ b/reward-5.html
@@ -100,7 +100,7 @@
     <div class="postbar is-light-theme">
       <div class="postbar-info">
         <div class="postbar-segment is-logo">
-          <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
+          <img class="logo" src="./assets/images/logos/logo-small.svg" alt="Logo">
         </div>
         <div class="postbar-segment is-meta">
           <span class="username" title="ศิริชัย  ลาภมหานนท์">ศิริชัย ลาภมหานนท์</span>
