remove unused code

--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@
 <body>
   <div class="background-container is-login">
     <div class="background-container-inner">
-      <div class="container is-login">
+      <div class="container">
         <form class="login" action="">
           <div class="login-segment is-logo">
             <img class="logo" src="./assets/images/logos/logo.svg" alt="Logo">
