--- a/scan-3.html
+++ b/scan-3.html
@@ -89,7 +89,7 @@
     <!-- <span class="title text-first-lg-bold is-orange-1">ตรวจสอบระยะประกันสินค้า</span> -->
   </div>
 
-  <div class="container-content is-except-topbar-title is-flex-center-all">
+<div class="container-content is-except-topbar-title is-flex-spacebetween-vertical">
     <div class="scan-form">
       <div class="scan-segment">
         <div class="scan">
